1) Added the json data accroding to the Jess Visual Content Builder. 2) Added the pause and resume button and also repeat button. 3) Added the highlighter while reading. 4) Added the loading gif.

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,16 @@
 }
 @keyframes rotate-text-up {
 0% {
+  transform: translate3d(0px, 80px, 0);
+  opacity: 0;
+}
+80% {
+  transform: translate3d(0, 0, 0);
+  opacity: 1;
+}
+}
+@keyframes rotate-text-right {
+0% {
   transform: translate3d(90px, 0px, 0);
   opacity: 0;
 }
@@ -98,6 +108,56 @@ font-style: normal;
 font-weight: 400;
 line-height: 28px; /* 127.273% */
 letter-spacing: 0.022px;
+}
+.lesson-buttons{
+  padding: 10px 16px 10px 12px;
+  background: rgba(126, 65, 139, 0.44);
+  color: rgba(255, 255, 255, 0.84);
+  /* M3/label/large */ 
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 142.857% */
+  letter-spacing: 0.1px;
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.bouncing-loader {
+  display: flex;
+  justify-content: center;
+}
+
+.bouncing-loader > div {
+  width: 16px;
+  height: 16px;
+  margin: 3px 6px;
+  border-radius: 50%;
+  background-color: #a3a1a1;
+  opacity: 1;
+  animation: bouncing-loader 0.6s infinite alternate;
+}
+
+@keyframes bouncing-loader {
+  to {
+    opacity: 0.1;
+    transform: translateY(-16px);
+  }
+}
+
+.bouncing-loader > div:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.bouncing-loader > div:nth-child(3) {
+  animation-delay: 0.4s;
 }
 
 
